Modified project settings

--- a/project.config
+++ b/project.config
@@ -2,7 +2,7 @@
 	inheritFrom = All-Projects
 [submit]
 [project]
-	description = asdf
+	description = "ST official firmware for stmf4 series "
 [access "refs/*"]
 	owner = group user/wly3155
 [access "refs/for/refs/*"]
@@ -21,3 +21,12 @@
 [access "refs/tags/*"]
 	push = group user/wly3155
 	push = +force group user/wly3155
+[plugin "zuul-results-summary"]
+	enabled = false
+[plugin "uploadvalidator"]
+	blockedContentTypeWhitelist = false
+	maxPathLength = 0
+	rejectDuplicatePathnamesLocale = en
+	rejectSubmodule = false
+	rejectSymlink = false
+	rejectWindowsLineEndings = false
