Modified project settings

--- a/project.config
+++ b/project.config
@@ -2,7 +2,7 @@
 	inheritFrom = All-Projects
 [submit]
 [project]
-	description = "ST official firmware for stmf4 series "
+	description = ST official firmware for stmf4xx series.
 [access "refs/*"]
 	owner = group user/wly3155
 [access "refs/for/refs/*"]
